<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="editText">editText</string>
    <string name="InputPassword">InputPassword</string>
    <string name="imageView">imageView</string>
    <string name="Switch">Switch</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
</resources>
