<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

    <TextView
            android:text="@string/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText" android:hint="login name"
            android:inputType="textEmailAddress" android:text="login name"/>
    <TextView
            android:text="@string/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InputPassword"
            android:ems="10"
            android:id="@+id/editText2" android:inputType="textPassword"/>
    <ImageView
            android:src="@drawable/flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/imageView" android:contentDescription="imageView"/>
</LinearLayout>